--- a/res/layout/activity_capture.xml
+++ b/res/layout/activity_capture.xml
@@ -5,12 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".capture.CaptureActivity" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <Button
+        android:id="@+id/done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="Coming soon!" />
+        android:text="Done" />
 
 </RelativeLayout>
