--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,6 @@
 <resources>
 
     <style name="AppTheme" parent="android:Theme.Light" />
+    <style name="AppTheme.Fullscreen" parent="android:Theme.Light.NoTitleBar.Fullscreen" />
 
 </resources>
