--- a/res/layout/activity_camera.xml
+++ b/res/layout/activity_camera.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:contentDescription="@string/description_camera_preview" />
 
 </RelativeLayout>
