--- a/res/layout/activity_capture.xml
+++ b/res/layout/activity_capture.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:contentDescription="@string/description_image_preview"
         android:src="@android:drawable/ic_menu_camera" />
 
     <ProgressBar
