--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -48,8 +48,9 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            tools:ignore="UselessLeaf" />
 
         <Button
             android:id="@+id/button_about"
