--- a/res/values-ja/opencv_initializer_strings.xml
+++ b/res/values-ja/opencv_initializer_strings.xml
@@ -2,9 +2,9 @@
 <resources>
     <string name="opencv_failure">OpenCVの初期化に失敗しました。撮影機能は動作しません。</string>
     <string name="opencv_title">OpenCV Managerのダウンロード</string>
-    <string name="opencv_install">問題を撮影するために別のアプリ「OpenCV Manager」が必要です。これはGoogle Playで無料配布されています。ダウンロードページに移動しますか?</string>
+    <string name="opencv_install">このアプリは撮影した問題を認識する処理に別のアプリ「OpenCV Manager」を使います。これはGoogle Playで無料配布されています。\n\nダウンロードページを表示しますか?</string>
     <string name="opencv_ok">OK</string>
     <string name="opencv_cancel">キャンセル</string>
-    <string name="opencv_go">移動する</string>
+    <string name="opencv_go">表示する</string>
 
 </resources>
