--- a/res/values/opencv_initializer_strings.xml
+++ b/res/values/opencv_initializer_strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="opencv_failure">Initialization of OpenCV failed. Capture is unavailable.</string>
     <string name="opencv_title">Download OpenCV Manager?</string>
-    <string name="opencv_install">This app requires another app “OpenCV Manager” to capture a puzzle. It is available on Google Play for free. Do you want to visit the download page?</string>
+    <string name="opencv_install">This app uses another app “OpenCV Manager” to capture a puzzle. It is available on Google Play for free.\n\nDo you want to visit the download page?</string>
     <string name="opencv_ok">OK</string>
     <string name="opencv_cancel">Cancel</string>
     <string name="opencv_go">Go</string>
