--- a/res/values-ja/about_text.xml
+++ b/res/values-ja/about_text.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-<string name="about_text">
+<resources xmlns:tools="http://schemas.android.com/tools">
+<string name="about_text" tools:ignore="TypographyDashes,TypographyOther">
 \nこのアプリ「ナンプレ破り」はAlissa Sabre (http://alissa-sabre.cocolog-nifty.com) が作りました。
 これは実用的なアプリではなく、単なる実験またはアイディア確認です。
 ご自身の責任でお使いください。
