--- a/res/values/about_text.xml
+++ b/res/values/about_text.xml
@@ -1,13 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 <string name="about_text" tools:ignore="TypographyDashes,TypographyOther">
-\nNumber Place Breaker is written by Alissa Sabre (http://alissa-sabre.cocolog-nifty.com).
-It is not a practical application; it is just an experiment or a proof-of-concept.
+\nThe “Number Place Breaker” automatically solves Number Place puzzles, also known as Sudoku,
+only by taking a picture of a puzzle.
+It is not a practical application; Please consider it as an experiment or a proof-of-concept.
+There is no guarantee this app works correctly.
 Please use it on your own risk.
 \n
-\nThe solver part of this work was inspired by an excellent article by Naoyuki Tamura available as http://bach.istc.kobe-u.ac.jp/copris/puzzles/
-\n
 \nFull source code of this program is available on Github at http://github.com/AlissaSabre/NumberPlace
+\n
+\nHOW TO USE THIS APP
+\n
+\n1. Touch [Capture] to start the camera.
+\n
+\n2. Take a picture of a Number Place puzzle by touching anywhere on the screen.
+\n
+\n3. Check the captured puzzle. There may be erros. You can correct them by touching the puzzle board.
+\n
+\n4. Touch [Solve] to let the app solve the puzzle and show the answer.
+\n
+\nNOTE ON OpenCV Manager
+\n
+\nThis app internally uses another app, “OpenCV Manager” for image processing.
+It is available on Google Play for free.
+The Number Place Breaker prompts you when it is needed.
+Please install it if you want to use Capture function.
+It can\'t capture a puzzle unless OpenCV Manager is installed.
+\n
+\nCREDITS
+\n
+\nNumber Place Breaker is written by Alissa Sabre (http://alissa-sabre.cocolog-nifty.com).
+\n
+\nThe solver part of this work was inspired by an excellent article by Naoyuki Tamura available as http://bach.istc.kobe-u.ac.jp/copris/puzzles/
 \n
 \nThis program may use and/or contain whole or parts of unmodified works from the following open source projects.
 \n
@@ -84,6 +108,6 @@ under the following permissive license:
 \n  WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 \n
 \n“数独” and/or “Sudoku” appear registered trademarks by NIKOLI Co., Ltd. in Japan and some other countries.
-Other names of the same puzzle, e.g. “ナンプレ”, “ナンバープレース”, “Number Place” may be trademarks of someone in somewhere on this planet. I\'m not sure.
+Other names of the same puzzle, e.g. “ナンプレ”, “ナンバープレース”, “Number Place” may be trademarks of someone in somewhere on this planet.
 </string>
 </resources>
